<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%5$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g></string>
    <string name="delete_confirm_button_text">OK</string>
    <string name="cancel">Cancel</string>
    <plurals name="NNNtracksdeleted">

        
        <item quantity="one">1 song was deleted.</item>
        
        <item quantity="other"><xliff:g id="songs_to_delete">%d</xliff:g> songs were deleted.</item>
    </plurals>
    <string name="nowplaying_title">Now playing</string>
    <string name="streamloadingtext">Connecting to <xliff:g id="host">%s</xliff:g>\u2026</string>
    <string name="search_title">Search</string>
    <string name="delete_playlist_menu">Delete</string>
    <string name="edit_playlist_menu">Edit</string>
    <string name="rename_playlist_menu">Rename</string>
    <string name="playlist_deleted_message">Playlist deleted.</string>
    <string name="playlist_renamed_message">Playlist renamed.</string>
    <string name="sdcard_missing_title">No SD card</string>
    <string name="sdcard_missing_title_nosdcard">No USB storage</string>
    <string name="sdcard_busy_title">SD card unavailable</string>
    <string name="sdcard_busy_title_nosdcard">USB storage unavailable</string>
    <string name="unknown_artist_name">Unknown artist</string>
    <string name="unknown_album_name">Unknown album</string>
    <string name="shuffle_on_notif">Shuffle is on.</string>
    <string name="shuffle_off_notif">Shuffle is off.</string>
    <string name="repeat_off_notif">Repeat is off.</string>
    <string name="repeat_current_notif">Repeating current song.</string>
    <string name="repeat_all_notif">Repeating all songs.</string>
    <string name="share_menu">Share</string>
    <string name="exit_menu">Exit</string>
    <string name="about_menu_short">About</string>
    <string name="carmode_menu_short">Car Mode</string>
    <string name="search_soundcloud_menu_short">Buy On soundcloud</string>
    <string name="search_internet_menu_short">Search Online</string>
    <string name="search_lyrics_menu_short">Search Lyrics Online</string>
    <string name="searching_lyrics">Searching Lyrics for</string>
    <string name="searching_lyrics2">From</string>
    <string name="no_result_lyrics">No result found for</string>
    <string name="no_internet_available">No internet connection.\nPlease check your connection.</string>
    <string name="play_selection">Play</string>
    <string name="pause_selection">Pause</string>
    <string name="next_selection">Next</string>
    <string name="prev_selection">Previous</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="queue">Current playlist</string>
    <string name="new_playlist">New</string>
    <string name="new_playlist_name_template">New playlist <xliff:g id="number">%d</xliff:g></string>
    <plurals name="NNNtrackstoplaylist">

        
        <item quantity="one">1 song added to playlist.</item>
        
        <item quantity="other"><xliff:g example="27" id="number">%d</xliff:g> songs added to playlist.</item>
    </plurals>
    <string name="emptyplaylist">Selected playlist is empty.</string>
    <string name="create_playlist_create_text">Save</string>
    <string name="create_playlist_overwrite_text">Overwrite</string>
    <string name="service_start_error_title">Playback problem</string>
    <string name="service_start_error_msg">Sorry, the song could not be played.</string>
    <string name="service_start_error_button">OK</string>
    <string name="weekpicker_title">Set time</string>
    <string name="save_as_playlist">Save as playlist</string>
    <string name="clear_playlist">Clear playlist</string>
    <string name="musicbrowserlabel">Thunder Music</string>
    <string name="playback_failed">Sorry, the player does not support this type of audio file.</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="search_hint">Search Music</string>
    <string name="widget_initial_text">Touch to select music.</string>
    <string name="effectspanel">Sound effects</string>
    <string name="use_idle_timeout_title">Enable Timeout</string>
    <string name="use_idle_timeout_summary">When active, playback will be stopped after the given period of inactivity</string>
    <string name="idle_timeout_title">Playback Timeout</string>
    <plurals name="minutes">
        <item quantity="one">1 minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">1 hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <string name="settings">Settings</string>
    <string name="ui_settings">UI Settings</string>
    <string name="behaviour_settings">Behaviour Settings</string>
    <string name="headset_settings">Headset Settings</string>
    <string name="misc_settings">Miscellaneous</string>
    <string name="ui_lockscreen">Lockscreen Settings</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="duck_attenuation_title">Audio focus loss action</string>
    <string name="duck_attenuation_summary">Select action to take upon transient loss of audio focus (short alerts from other apps).\nThis may not work on some manufacturer roms, for example lg and samsung.</string>
    <string name="stay_on_title">Keep Screen On</string>
    <string name="stay_on_summary">Always keep screen on when in NowPlaying Screen</string>
    <string name="use_as_lock_title">Use Custom Lockscreen</string>
    <string name="aosp_lock_title">Use Android Lockscreen</string>
    <string name="aosp_lock_summary">When Playing Stock android Lockscreen Music Controls will be used</string>
    <string name="use_as_lock_summary">Use a Custom Lockscreen when playing music.</string>
    <string name="use_as_lock_main_title">Direct Unlock</string>
    <string name="lock_main_title">Swipe Up to Unlock</string>
    <string name="use_as_lock_main_summary">Use The Custom lockscreen as main Lockscreen when playing music.</string>
    <string name="smart_lock_title">Smart Lockscreen</string>
    <string name="smart_lock_summary">Prevent accidental unlocks and button press disabling them in the pocket!\nAlso will bring brightness down to minimize battery use when using volume controls in pocket!</string>
    <string name="pref_shake">Accelerometer Settings</string>
    <string name="enable_shake_title">Enable Shake</string>
    <string name="enable_flip_title">Enable Flip</string>
    <string name="shake_from_paused_summary">Enable Shake Even when music is Paused</string>
    <string name="shake_from_paused_title">Enable Shake when not playing</string>
    <string name="enable_flip_summary">Flip phone to Play/Pause music\nDoes not work when screen is off on some devices.</string>
    <string name="enable_shake_summary">Shake the phone to perform an action\nOnly active when music is playing\nDoes not work when screen is off on some devices.</string>
    <string name="shake_action_title">Shake Action</string>
    <string name="shake_threshold_title">Accelerometer Sensibility</string>
    <string name="single_click_title">Single Click Action</string>
    <string name="double_click_title">Double Click Action</string>
    <string name="triple_click_title">Triple Click Action</string>
    <string name="four_click_action_title">Four Click Action</string>
    <string name="headsethook_title">Enable Headset Buttons</string>
    <string name="headsethook__summary">Use single, double and triple clicks to control music.</string>
    <string name="four_click_title">Enable 4 Click Action</string>
    <string name="four_click_summary">Use also 4 clicks to control music.</string>
    <string name="unpause_on_headset_plug_title">Unpause on connect</string>
    <string name="unpause_on_headset_plug_summary">Unpause the player when a headset is connected (Works if service is in background)</string>
    <string name="launch_on_headset_plug_title">Launch Player on connect</string>
    <string name="launch_on_headset_plug_summary">Start the NowPlaying view when a headset is connected (Works if service is in background)</string>
    <string name="longpress_to_skip_title">Volume Rocker Controls</string>
    <string name="longpress_to_skip_summary">You can control music (next/prev) by longpressing on vol+/vol- when in Lock with Screen On</string>
    <string name="notification_title">Notification Style</string>
    <string name="notification_enable_title">Statusbar Notification</string>
    <string name="notification_enable_summary">Enable or Disable Notification in notification shade</string>
    <string name="popup_enable_title">Floating Notification</string>
    <string name="popup_enable_summary">Enable or Disable Floating Notification on the screen</string>
    <string name="theme_title">Theme</string>
    <string name="custom_theme_title">Custom Color</string>
    <string name="custom_theme_summary">If chosen the custom theme, you can choose which color you want to display</string>
    <string name="create_playlist_create_text_prompt">Playlist name</string>
    <string name="rename_playlist_same_prompt">Rename \"<xliff:g id="playlist">%s</xliff:g>\" to</string>
    <string name="rename_playlist_diff_prompt">Rename \"<xliff:g id="playlist">%s</xliff:g>\" to</string>
    <string name="current_color">Current color:	</string>
    <string-array name="entries_duck_attenuation">
        <item>Pause</item>
        <item>Nothing</item>
        <item>Volume -3 dB</item>
        <item>Volume -6 dB</item>
        <item>Volume -10 dB</item>
        <item>Volume -15 dB</item>
    </string-array>
    <string-array name="entries_theme_screen">
        <item>Black Theme</item>
        <item>Thunder Music Dark</item>
        <item>Thunder Music Light</item>
        <item>Custom Color Light Theme</item>
        <item>Custom Color Dark Theme</item>
    </string-array>
    <string-array name="entries_notification">
        <item>Expanded View</item>
        <item>Compact Notification</item>
    </string-array>
    <string-array name="weeklist">
        <item>"1 week"</item>
        <item>"2 weeks"</item>
        <item>"3 weeks"</item>
        <item>"4 weeks"</item>
        <item>"5 weeks"</item>
        <item>"6 weeks"</item>
        <item>"7 weeks"</item>
        <item>"8 weeks"</item>
        <item>"9 weeks"</item>
        <item>"10 weeks"</item>
        <item>"11 weeks"</item>
        <item>"12 weeks"</item>
    </string-array>
    <string-array name="click_action_entries">
        <item>Play/Pause Music</item>
        <item>NextSong</item>
        <item>PreviousSong</item>
        <item>Shuffle Next</item>
        <item>NextSong x2</item>
        <item>PreviousSong x2</item>
        <item>Seek (+30sec)</item>
        <item>Seek (+60sec)</item>
        <item>Seek (-30sec)</item>
        <item>Seek (-60sec)</item>
        <item>Volume +</item>
        <item>Volume -</item>
        <item>Stop Music</item>
    </string-array>
    <string name="save_lyrics">Save lyrics</string>
    <string name="save_lyrics_summary">When searching lyrics online, save them to allow offline access</string>
    <string name="go_popup">Show Popup</string>
    <string name="go_advanced_popup">Touch icon to show/hide controls.\nPress "x" to dismiss popup</string>
    <string name="playlist_favourites">Favourites</string>
    <string name="backup_button">Backup</string>
    <string name="restore_button">Restore</string>
    <string name="backup_files">Backup/Restore ThunderMusic Files</string>
    <string name="online_settings">Online Settings</string>
    <string name="clear_online_title">Delete Streaming History</string>
    <string name="clear_online_summary">Delete Streaming Search History</string>
</resources>