<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2016 Luca Di Maio <luca.dimaio1@gmail.com>
  ~
  ~ This file is part of ThunderMusic Player.
  ~
  ~ ThunderMusic is free software; you can redistribute it and/or modify
  ~ it under the terms of the GNU Library General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or (at your
  ~ option) any later version.
  ~
  ~ ThunderMusic is distributed in the hope that it will be useful, but
  ~ WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  ~ or FITNESS FOR A PARTICULAR PURPOSE.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dip">

    <TextView
        android:id="@+id/prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dip"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:layout_marginTop="8dip"
        android:fontFamily="sans-serif-light"
        android:text="@string/create_playlist_create_text_prompt"></TextView>

    <EditText
        android:id="@+id/playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dip"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:inputType="textCapSentences"
        android:singleLine="true">

        <requestFocus />
    </EditText>

    <LinearLayout
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancel"
            style="?android:buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/create"
            style="?android:buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/delete_confirm_button_text" />
    </LinearLayout>

</LinearLayout>
